Added generation of index.ts file when --typescript option is passed

--- a/source/BNFC.cabal
+++ b/source/BNFC.cabal
@@ -254,6 +254,9 @@ library
     BNFC.Backend.Java.RegToAntlrLexer
     BNFC.Backend.Java.Utils
 
+    -- TypeScript backend
+    BNFC.Backend.TypeScript
+
     -- XML backend
     BNFC.Backend.XML
 
