[ANTLR4] added generation for ANTLR4 files without target-specific code and with rule labels

--- a/source/BNFC.cabal
+++ b/source/BNFC.cabal
@@ -257,6 +257,13 @@ library
     -- TypeScript backend
     BNFC.Backend.TypeScript
 
+    -- Antlr4 backend
+    BNFC.Backend.Antlr
+    BNFC.Backend.Antlr.CFtoAntlr4Lexer
+    BNFC.Backend.Antlr.CFtoAntlr4Parser
+    BNFC.Backend.Antlr.RegToAntlrLexer
+    BNFC.Backend.Antlr.Utils
+
     -- XML backend
     BNFC.Backend.XML
 
