[TypeScript] some improvements on data types generation and implementation of builder (with some bugs now)

--- a/source/BNFC.cabal
+++ b/source/BNFC.cabal
@@ -257,6 +257,8 @@ library
     -- TypeScript backend
     BNFC.Backend.TypeScript
     BNFC.Backend.TypeScript.CFtoAbstract
+    BNFC.Backend.TypeScript.CFtoBuilder
+    BNFC.Backend.TypeScript.Utils
 
     -- Antlr4 backend
     BNFC.Backend.Antlr
