[TypeScript] init pretty-printer generation

--- a/source/BNFC.cabal
+++ b/source/BNFC.cabal
@@ -258,6 +258,7 @@ library
     BNFC.Backend.TypeScript
     BNFC.Backend.TypeScript.CFtoAbstract
     BNFC.Backend.TypeScript.CFtoBuilder
+    BNFC.Backend.TypeScript.CFtoPrinter
     BNFC.Backend.TypeScript.Utils
 
     -- Antlr4 backend
